--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PET Ciência da Computação</title>
-    <script type="module" crossorigin src="/assets/index.d14a84c3.js"></script>
-    <link rel="stylesheet" href="/assets/index.e8e8f9c7.css">
+    <script type="module" crossorigin src="/pet-page/assets/index.d14a84c3.js"></script>
+    <link rel="stylesheet" href="/pet-page/assets/index.8e379bb4.css">
   </head>
   <body>
     <div id="root"></div>
